[package]
name = "raft_server"
version = "0.1.0"
authors = ["Adrian Covaci <adrian.covaci@amdaris.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.6.0", features=["full"] }
bincode = "1.3.3"
serde = { version="1.0.0", features=["derive"] }
async-trait = "0.1.5"
tokio-test = "0.4.2"
